--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "color-scheme": "^1.0.1",
     "core-js": "^3.4.4",
     "vue": "^2.6.10",
     "vue-socket.io": "^3.0.7"
